--- a/estetic-styles.css
+++ b/estetic-styles.css
@@ -13,6 +13,21 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
 }
+@font-face {
+    font-family: Arabella;
+    src: url("fonts/Arabella.ttf");
+}
+@font-face {
+    font-family: MPLUSRounded1c;
+    src: url("fonts/MPLUSRounded1c-Bold.ttf");
+}
+.body-background {
+    background: #FFF2F2;
+}
+.first-path {
+    width: 100%;
+    height: 550px;
+}
 .line {
     position: absolute;
     width: 100%;
@@ -26,7 +41,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     background-image: url("Rectangle-line.png");
     background-repeat: no-repeat;
     position: absolute;
-    z-index: -1;
+    box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
+    margin-left: -10px;
 }
 .flex {
     display: flex;
@@ -43,7 +59,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     width: 65%;
     position: absolute;
     background-image: url(line-long.png);
-    background-repeat: no-repeat;
+    background-repeat: repeat-x;
     padding-top: 13px;
     display: flex;
     justify-content: center;
@@ -51,14 +67,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .link {
     margin-right: 20px;
 }
+.text-decoration-none {
+    text-decoration: none;
+    color: black;
+}
 .photo-lady {
-    width: 40%;
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.25);
-    margin-left: 692px;
-    margin-top: 9px;
+    width: 33%;
+    margin-left: 469px;
+    margin-top: 87px;
 }
 .margin-right {
-    margin-right: 80px;
+    margin-right: 0px;
     position: absolute;
     background-image: url(line-long.png);
     background-repeat: no-repeat;
@@ -73,6 +92,18 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .align-right {
     text-align: right;
 }
+.location {
+    font-family: Gabriela;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 23px;
+    color: black;
+}
+.icon-location {
+    width: 14px;
+    height: 14px;
+}
 .vk{
     width: 20px;
     height: 20px;
@@ -84,14 +115,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     height: 20px;
     background: url("Whatsapp.png") no-repeat center;
     background-size: contain;
-    margin-left: 12px;
+    margin-left: 17px;
 }
 .insta{
     width: 20px;
     height: 20px;
     background: url("Insta.png")no-repeat center;
     background-size: contain;
-    margin-left: 12px;
+    margin-left: 17px;
 }
 .flex-end {
     display: flex;
@@ -110,7 +141,214 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .button-center {
     display: flex;
     justify-content: center;
+    margin-bottom: 80px;
 }
 .button-style {
-    background: url("Button.png")no-repeat center;
+    text-decoration:none;
+    text-align:center;
+    padding:8px 19px;
+    border:solid 3px #4aaaa5;
+    -webkit-border-radius:23px;
+    -moz-border-radius:23px;
+    border-radius: 23px;
+    font:18px Arial, Helvetica, sans-serif;
+    font-weight:bold;
+    color:#000000;
+    background:#7accc8;
+    -webkit-box-shadow:0 3px 10px #bababa, inset 0 0 1px #ffffff;
+    -moz-box-shadow: 0 3px 10px #bababa,  inset 0 0 1px #ffffff;
+    box-shadow:0 3px 10px #bababa, inset 0 0 1px #ffffff;
+    text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
 }
+.text-estetic {
+    font-family: Gabriela;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 27px;
+    text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25)
+}
+.text-Nata {
+    font-family: Arabella ;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 59px;
+    font-size: 100px;
+    letter-spacing: 0.02em;
+    color: white;
+    text-shadow: 0 4.5px 3.75px rgba(0, 0, 0, 0.25);
+    margin: 40px 0;
+    z-index: 1;
+    position: relative;
+}
+.text-cosmetology {
+    font-family: Gabriela;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 27px;
+    text-decoration-line: underline;
+}
+.sing-up {
+    margin: 40px 0 10px 0;
+}
+
+
+
+
+///***2****///
+
+.path {
+    width: 100%;
+    height: 300px;
+}
+.white-rectangle {
+    background: white;
+    width: 231px;
+    height: 252px;
+    border-radius: 30px;
+    text-align: center;
+    box-shadow: 4px 4px 4px #A3D39C, -4px 4px 4px #A3D39C;
+    margin: 10px;
+}
+.invisible-rectangle {
+    background: #FFF2F2;
+    width: 231px;
+    height: 252px;
+    border-radius: 30px;
+    text-align: center;
+}
+.flex-container {
+    display: flex;
+    justify-content:center;
+}
+.margin-advantages {
+    margin-top: 40px;
+}
+.margin-p {
+    margin-top: 22px;
+}
+.margin-top-p {
+    margin-top: 70px;
+}
+
+
+
+/*3*/
+
+.container {
+    width: 100%;
+    margin-top: 100px;
+    display: table;
+    clear: both;
+}
+.Photo-1 {
+    width: 35%;
+    float: left;
+    position: absolute;
+}
+.Orange {
+    margin: 70px 0 0 30px;
+    float: right;
+    width: 70%;
+    background-color: rgba(228, 95, 86, 0.84);
+    padding-bottom: 80px;
+}
+h2 {
+    font-family: Gabriela;
+    color: white;
+    text-align: center;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    line-height: 30px;
+}
+.text-inherit {
+    margin-top: 40px;
+    text-align: inherit;
+    font-family: Gabriela;
+    color: white;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+}
+.paddind-div {
+    padding: 60px 40px 0 115px;
+}
+
+
+/*4*/
+.margin-header {
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+}
+.header {
+    color: white;
+    text-align: center;
+    font-family: Arabella ;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 74px;
+    line-height: 89px;
+    width: 841px;
+    height: 95px;
+    background: #4AAAA5;
+    box-shadow: 0px 2.75405px 6.88513px rgba(0, 0, 0, 0.25);
+    margin-top: 45px;
+}
+.services {
+    text-align: center;
+    font-family: Gabriela;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24.9493px;
+    line-height: 32px;
+}
+.buttons {
+    display: flex;
+    justify-content: flex-end;
+}
+.margin-buttons {
+    margin: 120px 195px 100px 0;
+}
+
+
+/*5*/
+.reviews {
+    height: 691.07px;
+    background: #A3D39C;
+}
+.padding-h2 {
+    font-family: Arabella;
+    font-size: 85px;
+    padding: 60px 0;
+
+}
+.margin-reviews {
+    margin: 84px 0 165px 0;
+}
+.vk-footer {
+    width: 50px;
+    height: 50px;
+    background: url("Vk.png") no-repeat center;
+    background-size: contain;
+}
+.whatsapp-footer{
+    width: 50px;
+    height: 50px;
+    background: url("Whatsapp.png") no-repeat center;
+    background-size: contain;
+}
+.insta-footer{
+    width: 50px;
+    height: 50px;
+    background: url("Insta.png") no-repeat center;
+    background-size: contain;
+}
+
+
+
+media (min-width: 760px) and (max-width: 1150px) {
+
