--- a/estetic-styles.css
+++ b/estetic-styles.css
@@ -1,5 +1,5 @@
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a,
-abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp,small,
+abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small,
 strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,
@@ -10,24 +10,34 @@ time, mark, audio, video {
     font-size: 100%;
     vertical-align: baseline;
 }
+
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
     display: block;
 }
+
 @font-face {
     font-family: Arabella;
     src: url("fonts/Arabella.ttf");
 }
 @font-face {
-    font-family: MPLUSRounded1c;
+    font-family: MPLUSRounded1c-Bold;
     src: url("fonts/MPLUSRounded1c-Bold.ttf");
 }
+@font-face {
+    font-family: MPLUSRounded1c;
+    src: url("fonts/MPLUSRounded1c-Regular.ttf");
+}
+
+
 .body-background {
     background: #FFF2F2;
 }
+
 .first-path {
     width: 100%;
     height: 550px;
 }
+
 .line {
     position: absolute;
     width: 100%;
@@ -44,164 +54,198 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
     margin-left: -10px;
 }
+
 .flex {
     display: flex;
     justify-content: left;
 }
+
 .links {
-    font-family: Rounded Mplus 1c Bold;
+    font-family: MPLUSRounded1c-Bold;
     font-style: normal;
     font-weight: bold;
-    font-size: 13.5px;
-    line-height: 20px;
-    color: #000000;
+    font-size: 24px;
+    line-height: 36px;
     margin-top: 75px;
     width: 65%;
     position: absolute;
     background-image: url(line-long.png);
     background-repeat: repeat-x;
-    padding-top: 13px;
+    padding-top: 5px;
+    display: flex;
+    justify-content: center;
+    margin-left: -45px;
+}
+
+.link {
+    margin-right: 30px;
+}
+
+.text-decoration-none {
+    text-decoration: none;
+    color: #565454
+}
+.lady-position {
     display: flex;
     justify-content: center;
 }
-.link {
-    margin-right: 20px;
-}
-.text-decoration-none {
-    text-decoration: none;
-    color: black;
-}
 .photo-lady {
-    width: 33%;
-    margin-left: 469px;
-    margin-top: 87px;
+    width: 326px;
+    height: 358px;
+    margin-left: 550px;
+    margin-top: 5px;
 }
-.margin-right {
-    margin-right: 0px;
+.photo-lady-tablet {
+    display: none;
+}
+
+.contacts-lady {
+    width: 100%;
     position: absolute;
     background-image: url(line-long.png);
     background-repeat: no-repeat;
     margin-top: 75px;
 }
+
 .contacts {
-    padding-top: 13px;
+    font-size: 20px;
+    line-height: 36px;
+    padding-top: 6px;
+    font-family: MPLUSRounded1c-Bold;
+    color: #DB6B64;
 }
-.float-right {
-    float: right;
+
+.all-contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 19%;
 }
-.align-right {
-    text-align: right;
-}
+
+
 .location {
     font-family: Gabriela;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
-    line-height: 23px;
+    font-size: 24px;
+    line-height: 31px;
     color: black;
 }
+
 .icon-location {
-    width: 14px;
-    height: 14px;
+    width: 18px;
+    height: 18px;
 }
-.vk{
-    width: 20px;
-    height: 20px;
+
+.vk {
+    width: 34px;
+    height: 34px;
     background: url("Vk.png") no-repeat center;
     background-size: contain;
 }
-.whatsapp{
-    width: 20px;
-    height: 20px;
+
+.whatsapp {
+    width: 34px;
+    height: 34px;
     background: url("Whatsapp.png") no-repeat center;
     background-size: contain;
     margin-left: 17px;
 }
-.insta{
-    width: 20px;
-    height: 20px;
-    background: url("Insta.png")no-repeat center;
+
+.insta {
+    width: 34px;
+    height: 34px;
+    background: url("Insta.png") no-repeat center;
     background-size: contain;
     margin-left: 17px;
 }
-.flex-end {
+
+.socials {
     display: flex;
-    justify-content: flex-end;
     padding-top: 5px;
 }
+
 .margin-text {
-    margin-top: 170px;
+    margin-top: 150px;
 }
+
 .estetic-st {
     margin: 196px 1px 30px 328px;
 }
+
 .text-center {
     text-align: center;
 }
+
 .button-center {
     display: flex;
     justify-content: center;
     margin-bottom: 80px;
 }
+
 .button-style {
-    text-decoration:none;
-    text-align:center;
-    padding:8px 19px;
-    border:solid 3px #4aaaa5;
-    -webkit-border-radius:23px;
-    -moz-border-radius:23px;
-    border-radius: 23px;
-    font:18px Arial, Helvetica, sans-serif;
-    font-weight:bold;
-    color:#000000;
-    background:#7accc8;
-    -webkit-box-shadow:0 3px 10px #bababa, inset 0 0 1px #ffffff;
-    -moz-box-shadow: 0 3px 10px #bababa,  inset 0 0 1px #ffffff;
-    box-shadow:0 3px 10px #bababa, inset 0 0 1px #ffffff;
+    text-decoration: none;
+    text-align: center;
+    padding: 9px 22px;
+    border: solid 3px #4aaaa5;
+    -webkit-border-radius: 23px;
+    -moz-border-radius: 23px;
+    border-radius: 30px;
+    font-weight: 500;
+    font: 24px MPLUSRounded1c, sans-serif;
+    line-height: 36px;
+    color: #000000;
+    background: #7accc8;
+    -webkit-box-shadow: 0 3px 10px #bababa, inset 0 0 1px #ffffff;
+    -moz-box-shadow: 0 3px 10px #bababa, inset 0 0 1px #ffffff;
+    box-shadow: 0 3px 10px #bababa, inset 0 0 1px #ffffff;
     text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
 }
+
 .text-estetic {
     font-family: Gabriela;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 27px;
+    font-size: 24px;
+    line-height: 31px;
     text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25)
 }
+
 .text-Nata {
-    font-family: Arabella ;
+    font-family: Arabella;
     font-style: normal;
     font-weight: 500;
-    line-height: 59px;
-    font-size: 100px;
+    line-height: 145px;
+    font-size: 120px;
     letter-spacing: 0.02em;
     color: white;
     text-shadow: 0 4.5px 3.75px rgba(0, 0, 0, 0.25);
-    margin: 40px 0;
     z-index: 1;
     position: relative;
+    width: 110%;
 }
+
 .text-cosmetology {
     font-family: Gabriela;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 27px;
     text-decoration-line: underline;
 }
+
 .sing-up {
     margin: 40px 0 10px 0;
 }
 
 
-
-
-///***2****///
+/***2****/
 
 .path {
     width: 100%;
-    height: 300px;
+    height: 100%;
 }
+
 .white-rectangle {
     background: white;
     width: 231px;
@@ -211,6 +255,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     box-shadow: 4px 4px 4px #A3D39C, -4px 4px 4px #A3D39C;
     margin: 10px;
 }
+
 .invisible-rectangle {
     background: #FFF2F2;
     width: 231px;
@@ -218,20 +263,39 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     border-radius: 30px;
     text-align: center;
 }
+
 .flex-container {
     display: flex;
-    justify-content:center;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: -5px;
 }
+
 .margin-advantages {
-    margin-top: 40px;
+    margin-top: 20px;
+}
+.padding-advantages {
+    padding-top: 10px;
 }
 .margin-p {
     margin-top: 22px;
+    font-size: 24px;
+    line-height: 25px;
 }
+
 .margin-top-p {
     margin-top: 70px;
 }
-
+.buttons-center {
+    display: flex;
+    justify-content: center;
+}
+.margin-sing-up {
+    margin: 71px 0 42px 0;
+}
+.go-to-price {
+    margin-bottom: 41px;
+}
 
 
 /*3*/
@@ -242,11 +306,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     display: table;
     clear: both;
 }
+
 .Photo-1 {
     width: 35%;
     float: left;
     position: absolute;
 }
+
 .Orange {
     margin: 70px 0 0 30px;
     float: right;
@@ -254,6 +320,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
     background-color: rgba(228, 95, 86, 0.84);
     padding-bottom: 80px;
 }
+
 h2 {
     font-family: Gabriela;
     color: white;
@@ -263,7 +330,8 @@ h2 {
     font-size: 36px;
     line-height: 30px;
 }
-.text-inherit {
+
+.text-main {
     margin-top: 40px;
     text-align: inherit;
     font-family: Gabriela;
@@ -273,6 +341,7 @@ h2 {
     font-size: 18px;
     line-height: 25px;
 }
+
 .paddind-div {
     padding: 60px 40px 0 115px;
 }
@@ -284,10 +353,11 @@ h2 {
     display: flex;
     justify-content: center;
 }
+
 .header {
     color: white;
     text-align: center;
-    font-family: Arabella ;
+    font-family: Arabella;
     font-style: normal;
     font-weight: 500;
     font-size: 74px;
@@ -298,21 +368,21 @@ h2 {
     box-shadow: 0px 2.75405px 6.88513px rgba(0, 0, 0, 0.25);
     margin-top: 45px;
 }
+
 .services {
     text-align: center;
     font-family: Gabriela;
     font-style: normal;
     font-weight: normal;
-    font-size: 24.9493px;
-    line-height: 32px;
+    font-size: 24px;
+    line-height: 31px;
 }
+
 .buttons {
     display: flex;
     justify-content: flex-end;
 }
-.margin-buttons {
-    margin: 120px 195px 100px 0;
-}
+
 
 
 /*5*/
@@ -324,24 +394,24 @@ h2 {
     font-family: Arabella;
     font-size: 85px;
     padding: 60px 0;
-
 }
 .margin-reviews {
     margin: 84px 0 165px 0;
 }
+
 .vk-footer {
     width: 50px;
     height: 50px;
     background: url("Vk.png") no-repeat center;
     background-size: contain;
 }
-.whatsapp-footer{
+.whatsapp-footer {
     width: 50px;
     height: 50px;
     background: url("Whatsapp.png") no-repeat center;
     background-size: contain;
 }
-.insta-footer{
+.insta-footer {
     width: 50px;
     height: 50px;
     background: url("Insta.png") no-repeat center;
@@ -350,5 +420,393 @@ h2 {
 
 
 
-media (min-width: 760px) and (max-width: 1150px) {
+/* Преимущества*/
+@media (min-width: 983px) and (max-width: 1215px) {
+    .w-964 {
+        background: white;
+        width: 231px;
+        height: 252px;
+        border-radius: 30px;
+        text-align: center;
+        box-shadow: 4px 4px 4px #A3D39C, -4px 4px 4px #A3D39C;
+        margin: 10px;
+    }
 
+    .i-964 {
+        background: #FFF2F2;
+        width: 231px;
+        height: 252px;
+        border-radius: 30px;
+        text-align: center;
+        box-shadow: none;
+    }
+}
+@media (min-width: 734px) and (max-width: 985px) {
+
+    .w-734 {
+        background: white;
+        width: 231px;
+        height: 252px;
+        border-radius: 30px;
+        text-align: center;
+        box-shadow: 4px 4px 4px #A3D39C, -4px 4px 4px #A3D39C;
+        margin: 10px;
+    }
+
+    .i-734 {
+        background: #FFF2F2;
+        width: 231px;
+        height: 252px;
+        border-radius: 30px;
+        text-align: center;
+        box-shadow: none;
+    }
+}
+
+@media (min-width: 320px) and (max-width:733px) {
+
+    .w-320 {
+        background: white;
+        width: 231px;
+        height: 252px;
+        border-radius: 30px;
+        text-align: center;
+        box-shadow: 4px 4px 4px #A3D39C, -4px 4px 4px #A3D39C;
+        margin: 10px;
+    }
+    .i-320 {
+        background: #FFF2F2;
+        width: 231px;
+        height: 252px;
+        border-radius: 30px;
+        text-align: center;
+        box-shadow: none;
+    }
+}
+/* Преимущества*/
+
+
+
+
+
+@media (min-width: 760px) and (max-width: 1130px) {
+    .all-contacts {
+        font-size: 18px;
+        padding-right: 5%;
+    }
+    .photo-lady-tablet {
+        display: none;
+    }
+    .text-Nata {
+        font-size: 84px;
+    }
+    .links {
+        font-size: 18px;
+        line-height: 27px;
+    }
+    .text-estetic {
+        font-size: 18px;
+        line-height: 23px;
+    }
+    .text-cosmetology {
+        font-size: 12px;
+        line-height: 14px;
+    }
+    .button-style {
+        font-size: 19px;
+        line-height: 28px;
+        padding: 7px 16px;
+    }
+    .location {
+        font-size: 18px;
+        line-height: 23px;
+    }
+    .icon-location {
+        width: 15px;
+        height: 15px;
+    }
+    .contacts {
+        font-size: 18px;
+        line-height: 27px;
+    }
+    .vk {
+        width: 21px;
+        height: 21px;
+    }
+    .whatsapp {
+        width: 21px;
+        height: 21px;
+    }
+    .insta {
+        width: 21px;
+        height: 21px;
+    }
+    .hidden-lady-photo {
+        display: none;
+    }
+    .tablet-lady {
+        width: 219px;
+        height: 195px;
+    }
+    .container {
+        margin-top: 0;
+    }
+}
+
+@media (min-width: 760px) and (max-width: 930px) {
+    .rectangle {
+        height: 394.73px;
+    }
+    .photo-lady {
+        display: none;
+    }
+    .photo-lady-tablet {
+        width: 300px;
+        height: 267px;
+        display: initial;
+        margin-left: 448px;
+        margin-top: 30px;
+    }
+    .first-path {
+        height: 465px;
+    }
+    .links {
+        font-size: 16px;
+        line-height: 27px;
+        margin-left: 0;
+    }
+    .link {
+        margin-right: 10px;
+    }
+    .all-contacts {
+        font-size: 18px;
+        padding-right: 5%;
+    }
+    .contacts{
+        font-size: 18px;
+        line-height: 27px;
+    }
+    .location {
+        font-size: 18px;
+        line-height: 23px;
+    }
+    .vk {
+        width: 21px;
+        height: 21px;
+    }
+    .whatsapp {
+        width: 21px;
+        height: 21px;
+    }
+    .insta {
+        width: 21px;
+        height: 21px;
+    }
+    .text-estetic {
+        font-size: 18px;
+        line-height: 23px;
+    }
+    .text-Nata {
+        font-size: 84px;
+    }
+    .text-cosmetology {
+        font-size: 12px;
+        line-height: 14px;
+    }
+    .text-main {
+        font-size: 14px;
+        line-height: 20px;
+        margin-top: 20px;
+    }
+    .paddind-div {
+        padding: 40px 10px 0 56px;
+    }
+    .h2-size {
+        font-size: 20px;
+    }
+    .Orange {
+        padding-bottom: 40px;
+    }
+    .margin-p {
+        font-size: 18px;
+    }
+    .header {
+        font-size: 50px;
+    }
+    .margin-top-p {
+        margin-top: 25px;
+    }
+    .margin-sing-up-small {
+        margin: 42px 0 42px 0;
+    }
+}
+
+@media (min-width: 720px) and (max-width: 760px) {
+    .rectangle {
+        height: 394.73px;
+    }
+    .first-path {
+        width: 100%;
+        height: 465px;
+    }
+    .photo-lady {
+        display: none;
+    }
+    .photo-lady-tablet {
+        width: 300px;
+        height: 267px;
+        display: initial;
+        margin-left: 448px;
+        margin-top: 30px;
+    }
+    .links {
+        font-size: 16px;
+        line-height: 27px;
+        margin-left: 0;
+    }
+    .link {
+        margin-right: 10px;
+    }
+    .all-contacts {
+        font-size: 18px;
+        padding-right: 5%;
+    }
+    .contacts{
+        font-size: 18px;
+        line-height: 27px;
+    }
+    .location {
+        font-size: 18px;
+        line-height: 23px;
+    }
+    .vk {
+        width: 21px;
+        height: 21px;
+    }
+    .whatsapp {
+        width: 21px;
+        height: 21px;
+    }
+    .insta {
+        width: 21px;
+        height: 21px;
+    }
+    .text-estetic {
+        font-size: 18px;
+        line-height: 23px;
+    }
+    .text-Nata {
+        font-size: 76px;
+    }
+    .text-cosmetology {
+        font-size: 12px;
+        line-height: 14px;
+    }
+    .margin-p {
+        font-size: 18px;
+    }
+    .header {
+        font-size: 50px;
+    }
+    .margin-top-p {
+        margin-top: 25px;
+    }
+    .margin-sing-up-small {
+        margin: 42px 0 42px 0;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 720px) {
+    .photo-lady {
+        display: none;
+    }
+    .white-header {
+        width: 303px;
+        height: 27px;
+        background: white;
+        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25), -2px 0px 4px rgba(0, 0, 0, 0.25);
+    }
+    .burger {
+        width: 28px;
+        height: 28px;
+        background: url("burger.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        border: none;
+    }
+.mobile-number {
+font-family: Gabriela;
+font-size: 12px;
+line-height: 14px;
+margin-top: 6px;
+}
+.mobile-menu {
+display: flex;
+justify-content: space-around;
+}
+.socials-mobile {
+display: flex;
+margin-top: 5px;
+}
+.mobile-lady {
+width: 311px;
+height: 231px;
+background: url("Mobile-lady.png");
+margin-top: 14px;
+}
+.text-Nata-mobile {
+font-size: 30px;
+margin: 0 0 0 -10px;
+}
+.text-estetic-mobile {
+font-size: 12px;
+line-height: 15px;
+padding-top: 36px;
+}
+.text-container {
+width: 201px;
+height: 230px;
+}
+.text-cosmetology-mobile {
+font-size: 9px;
+line-height: 10px;
+}
+.button-style-mobile {
+width: 96px;
+height: 21px;
+padding: 0;
+}
+.p-mobile {
+font-size: 11px;
+}
+
+
+
+
+    @media (min-width: 964px) and (max-width: 1215px) {
+
+        .w-964 {
+            background: white;
+            width: 231px;
+            height: 252px;
+            border-radius: 30px;
+            text-align: center;
+            box-shadow: 4px 4px 4px #A3D39C, -4px 4px 4px #A3D39C;
+            margin: 10px;
+        }
+
+        .i-964 {
+            background: #FFF2F2;
+            width: 231px;
+            height: 252px;
+            border-radius: 30px;
+            text-align: center;
+        }
+    }
+
+
+
+
+
+
+}
