--- a/Reviews-styles.css
+++ b/Reviews-styles.css
@@ -35,6 +35,9 @@ body {
     background-image: url("Bg-leaf-small.png");
     background-repeat: no-repeat;
 }
+button {
+    outline: none;
+}
 .go-back {
     position: absolute;
     margin: 20px 10px 0px 33px;
@@ -57,11 +60,17 @@ section {
     font-family: Gabriela;
     font-size: 16px;
     line-height: 30px;
+    overflow: hidden;
+    height: 460px;
 }
 .reviews-flex {
+    width: 100%;
+    height: 390px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    position: relative;
+    top: -460px;
 }
 .btn-next-certificate {
     display: flex;
@@ -73,11 +82,14 @@ section {
     background: rgba(74, 170, 165, 0);
     border: none;
 }
+.button-next {
+    padding-top: 35px;
+}
 .rotate-btn {
     transform: rotate(180deg);
 }
 section>div>div>img {
-    margin: 30px 0 15px 0;
+    margin: 30px 0 35px 0;
 }
 .button-center {
     display: flex;
@@ -113,4 +125,20 @@ section>div>div>img {
 .p-tablet{
     font-size: 18px;
     line-height: 28px;
+}
+div>img {
+    margin: 20px 0;
+}
+@media (min-width: 200px) and (max-width: 700px) {
+    .go-back {
+        width: 50px;
+        margin: 0px 0px 0px 5px
+    }
+    header {
+        font-size: 47px;
+        line-height: 43px;
+        margin-bottom: 24px;
+        margin-top: 20px;
+    }
+    }
 }
