--- a/estetic-styles.css
+++ b/estetic-styles.css
@@ -9,6 +9,7 @@ time, mark, audio, video {
     border: 0;
     font-size: 100%;
     vertical-align: baseline;
+    outline: none;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -32,6 +33,9 @@ body {
     background-image: url("bg-leaf.png");
     background-repeat: no-repeat;
     background-position:-250px  531px;
+}
+button {
+    outline: none;
 }
 .first-path {
     width: 100%;
@@ -191,6 +195,16 @@ body {
     -webkit-box-shadow: 0 3px 10px #656565, inset 0 0 1px #ffffff;
     -moz-box-shadow: 0 3px 10px #656565, inset 0 0 1px #ffffff;
     box-shadow: 0 4px 10px #656565, inset 0 0 1px #ffffff;
+}
+.z-index {
+    z-index: 100;
+}
+.first-button:hover {
+    background: #83d6d2;
+    -webkit-box-shadow: 0 3px 10px #818181, inset 0 0 1px #ffffff;
+    -moz-box-shadow: 0 3px 10px #818181, inset 0 0 1px #ffffff;
+    box-shadow: 0 4px 10px #818181, inset 0 0 1px #ffffff;
+    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.25);
 }
 .text-estetic {
     font-family: Gabriela;
