--- a/estetic-styles.css
+++ b/estetic-styles.css
@@ -433,7 +433,7 @@ h2 {
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     z-index: 999;
@@ -443,14 +443,7 @@ h2 {
     background-color: #A3D39C;
 }
 .pop-up.show-popup {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .pop-up .pop-up-part2 {
     display: none;
