Начала делать Js для страницы 'Отзывы', исправила расположение блоков в мобильной версии, настроили попапы на всех страницах, поправила размеры текстов

--- a/Services-styles.css
+++ b/Services-styles.css
@@ -32,7 +32,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
     background: linear-gradient(180deg, #F6FBD9 0%, rgba(255, 255, 255, 0) 100%),
     linear-gradient(180deg, #7ACCC8 0%, rgba(122, 204, 200, 0) 100%);
-    background-image: url("Bg-leaf-small.png");
+    background-image: url("pictures/Bg-leaf-small.png");
     background-repeat: no-repeat;
 }
 button {
