--- a/Certificates-styles.css
+++ b/Certificates-styles.css
@@ -32,7 +32,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
     background: linear-gradient(180deg, #F6FBD9 0%, rgba(255, 255, 255, 0) 100%),
     linear-gradient(180deg, #7ACCC8 0%, rgba(122, 204, 200, 0) 100%);
-    background-image: url("Bg-leaf-small.png");
+    background-image: url("pictures/Bg-leaf-small.png");
     background-repeat: no-repeat;
 }
 .go-back {
@@ -80,12 +80,6 @@ section>div>img {
     position: relative;
     transition: top 200ms;
 }
-.flex-center {
-    display: flex;
-    justify-content: center;
-    position: relative;
-    z-index: 6;
-}
 .rotate-btn-up {
     transform: rotate(-90deg);
 }
@@ -93,6 +87,7 @@ section>div>img {
     transform: rotate(90deg);
     background-color: rgba(74, 170, 165,0);
     border: none;
+    margin: 5px;
 }
 
 @media (min-width: 2475px) {
