--- a/Reviews-styles.css
+++ b/Reviews-styles.css
@@ -32,15 +32,22 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
     background: linear-gradient(180deg, #F6FBD9 0%, rgba(255, 255, 255, 0) 100%),
     linear-gradient(180deg, #7ACCC8 0%, rgba(122, 204, 200, 0) 100%);
-    background-image: url("Bg-leaf-small.png");
+    background-image: url("pictures/Bg-leaf-small.png");
     background-repeat: no-repeat;
 }
 button {
     outline: none;
 }
+.margin-btn {
+    margin-top: -16px;
+    margin-bottom: 7px;
+}
+.margin-btn-down {
+    margin-top: -17px;
+}
 .go-back {
     position: absolute;
-    margin: 20px 10px 0px 33px;
+    margin: 20px 10px 0 33px;
 }
 header {
     text-align: center;
@@ -70,7 +77,7 @@ section {
     justify-content: space-around;
     flex-wrap: wrap;
     position: relative;
-    top: -460px;
+    transition: top 200ms;
 }
 .btn-next-certificate {
     display: flex;
@@ -89,7 +96,7 @@ section {
     transform: rotate(180deg);
 }
 section>div>div>img {
-    margin: 30px 0 35px 0;
+    margin: 30px 0 40px 0;
 }
 .button-center {
     display: flex;
@@ -127,7 +134,8 @@ section>div>div>img {
     line-height: 28px;
 }
 div>img {
-    margin: 20px 0;
+    margin-bottom: 60px;
+    margin-top: 10px;
 }
 @media (min-width: 200px) and (max-width: 700px) {
     .go-back {
