--- a/Certificates-styles.css
+++ b/Certificates-styles.css
@@ -147,12 +147,17 @@ section>div>button {
 @media (min-width: 220px) and (max-width: 700px) {
     header {
           font-size: 43px;
-          line-height: 43px;
+          line-height: 35px;
           margin-bottom: 24px;
           margin-top: 20px;
       }
     .go-back {
         width: 40px;
         margin: 0 0 0 20px;
+    }
+}
+@media (min-width: 220px) and (max-width: 500px) {
+    .go-back {
+        margin: 0;
     }
 }
