--- a/Services-styles.css
+++ b/Services-styles.css
@@ -30,8 +30,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 
 body {
-    background: linear-gradient(180deg, #F6FBD9 0%, rgba(255, 255, 255, 0) 100%),
-    linear-gradient(180deg, #7ACCC8 0%, rgba(122, 204, 200, 0) 100%);
+    background: rgb(255,242,242);
     background-image: url("pictures/Bg-leaf-small.png");
     background-repeat: no-repeat;
 }
@@ -51,7 +50,7 @@ header {
     line-height: 64px;
 }
 .sections {
-    background: rgba(163, 211, 156, 0.8);
+    background: #B6E3D3;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
     margin:25px 10px  15px 10px;
     padding:25px 15px;
