--- a/Services-styles.css
+++ b/Services-styles.css
@@ -31,7 +31,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
     background: rgb(255,242,242);
-    background-image: url("pictures/Bg-leaf-small.png");
+    background-image: url("pictures/Bg-leaf-small.webp");
     background-repeat: no-repeat;
 }
 button {
